--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@v4
 
       - name: Build Angular App
-        run: npm run build -- --configuration production
+        run: npx ng build -- --configuration production
 
       - name: Deploy to Github Pages
         uses: JamesIves/github-pages-deploy-action@v4
