--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,10 @@ jobs:
         run: npm install -g @angular/cli
 
       - name: Build Library
-        run: npm run build my-ui-lib -- --configuration production
+        run: npm run build my-ui-lib
 
       - name: Build Sandbox App
-        run: npm run build sandbox -- --configuration production
+        run: npm run build sandbox
 
       - name: Deploy to Github Pages
         uses: JamesIves/github-pages-deploy-action@v4
