--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PAT }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -20,9 +22,6 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
-
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli
 
       - name: Build Library
         run: npm run build my-ui-lib
